--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <style>
-      
+
       * {
         box-sizing: border-box;
         margin: 0;
@@ -173,7 +173,7 @@
   <body>
     <nav>
       <a href="#">Home</a>
-      <a href="#">About</a>
+      <a href="about.html">About</a>
       <a href="#">Contact</a>
 
       <img id="icon" src="https://placehold.co/50x50" alt="" />
